# todoist-to-obsidian

./: .gitignore  LICENSE  README.md  install.ps1  install.sh  pyproject.toml  todoist_to_obsidian.py
.github/workflows/: test.yml
examples/: config.example.toml  launchd.example.plist  raycast-import-now.example.sh
skills/todoist-to-obsidian/: SKILL.md
src/todoist_obsidian_bridge/: __init__.py  cli.py  config.py  formatting.py  obsidian.py  paths.py  routing.py  state.py  todoist.py
src/todoist_obsidian_bridge/scheduler/: __init__.py  core.py  launchd.py  systemd.py  windows_task.py
tests/: test_config.py  test_examples.py  test_formatting.py  test_obsidian.py  test_routing.py  test_scheduler.py
